 		• sd_bus_message_set_priority;
 		• sd_bus_message_get_priority;
 		• sd_bus_get_owner_machine_id;
 		• sd_bus_negotiate_timestamp;
 	- remove “BusTransport” enum;
 	- allow naming event sources;
 	- use event source name rather than address in debug messages;
 	- name event sources used in libraries;
 	- remove “bus-bloom” module;
 * logind:
 	- remove “GetSessionByPID” dbus method;
 * loginctl:
 	- remove “machine” argument option;
 * systemd-analyze:
 	- remove “machine” argument option;
 * systemd-run:
 	- remove “machine” argument option;
 * kdbus:
 	- remove “sd-resolve” module;
 	- remove “sd-utf8” module;
 	- remove “bus-container” module;
 	- remove “bus-kernel” module;
 	- remove PORTING-DBUS1 file;
 	- remove kdbus.h header file;
 * systemctl:
 	- remove “list-machines” command;
 	- remove “recursive” argument option;
 	- remove “machine” argument option;
 	- filter templates from restartable units in bash-completion;
 * units:
 	- remove “org.freedesktop.login1” busname;
 	- remove “org.freedesktop.systemd1” busname;
 	- remove “busnames” target;
 * po:
 	- update Russian translation;
 	- update French translation;
 * tests:
 	- remove “test-resolve” test;
 	- remove “test-bus-kernel” test;
 	- remove “test-bus-kernel-bloom” test;
 	- remove “test-bus-kernel-benchmark” test;
 * build:
 	- remove USER_BUSNAMES_TARGET_WANTS unit path;
 	- remove BUSNAMES_TARGET_WANTS unit path;
 * remove busname unit type;

   systemd (214.9)
~~~~~~~
 * core:
 	- remove dbus get properties: CanStart, CanStop, CanReload, CanIsolate;
 	- remove dbus “SwitchRoot” method;
 	- don't generate /{etc,run}/machine-id file;
 	- don't dispatch sd_notify() messages and SIGCHLD multiple times to the same units;
 	- allow informing systemd about service status changes with RELOADING=1 and STOPPING=1
 	  sd_notify() messages;
 	- use the right timeout for stop processes we fork;
 	- allow services of Type=oneshot that specify no ExecStart= commands;