@@ -46,10 +46,6 @@
 
                 <allow send_destination="org.freedesktop.login1"
                        send_interface="org.freedesktop.login1.Manager"
-                       send_member="GetUserByPID"/>
-
-                <allow send_destination="org.freedesktop.login1"
-                       send_interface="org.freedesktop.login1.Manager"
                        send_member="GetSeat"/>
 
                 <allow send_destination="org.freedesktop.login1"
